syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";

message ScalarTypes {
    int32 Integer32 = 1;
    uint32 UInteger32 = 2;
    sint32 SInteger32 = 3;
    fixed32 Fixed32 = 4;
    sfixed32 SFixed32 = 5;
	int64 Integer64 = 6;
    uint64 UInteger64 = 7;
    sint64 SInteger64 = 8;
    fixed64 Fixed64 = 9;
    sfixed64 SFixed64 = 10;
	double Double = 11;
    float Float = 12;
    bool Booelan = 13;
    string String = 14;
    bytes Bytes = 15;
}

enum Gender {
    Male = 0;
    Female = 1;
}

message ComplexTypes {
    Gender Sex = 1;
    ScalarTypes SubClass = 2;
    repeated int32 Numbers = 3;
    google.protobuf.Any Details = 4;
    oneof Oneof {
        int32 Integer32 = 5;
        int64 Integer64 = 6;
    }
    map<int32, string> Maps = 7;
}

message NullableTypes {
    google.protobuf.Int32Value NullableInt = 1; //int? in C#
    google.protobuf.Int64Value NullableLong = 2; //long? in C#
    google.protobuf.UInt32Value NullableUInt = 3; //uint? in C#
    google.protobuf.UInt64Value NullableULong = 4; //ulong? in C#
    google.protobuf.DoubleValue NullableDouble = 5; //double? in C#
    google.protobuf.FloatValue NullableFloat = 6; //float? in C#
}

message TimeTypes {
    string subject = 1;
    google.protobuf.Timestamp Time = 2; //Equivalent to DateTime in C#
    google.protobuf.Duration Duration = 3; //Equivalent to TimeSpan in C#
}
